2 cajitas más y footer completo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
 			</ul>
 		</div>
 		<div id="content">
-			<div class="box">
+			<div class="box box1">
+				<h1>PIERDE HASTA 3 KILOS <span>EN 3 MESES</span></h1>
+				<p>Pierde peso con nuestro <strong>exclusivo plan dietético,</strong> elaborado y controlado por la Dra. Susana Monereo</p>
+				<a href="">más información</a>
+				<img class="box1_bascula" src="assets/box1_bascula.png" alt="" />
+			</div>
+			<div class="box box2">
+				<h2>CONSEJOS DE <span>NUTRICIÓN</span></h2>
+				<p>Los mejores consejos de nutrición elaborados por la Dra. Susana Monereo y su equipo de endocrinología</p>
+				<a href="">lee nuestros consejos</a>
 			</div>
 			<div id="footer">
 				<div class="footer_head">
@@ -43,8 +52,24 @@
 					</ul>
 				</div>
 				<div class="footer_content">
-					<div style="width: 206px;">s</div>
-					<div style="width: 145px;">s</div>
+					<div style="width: 206px;">
+						<h4>INFO LEGAL:</h4>
+						<p>DIETA GOURMET 2000 SL</p>
+						<p>C.I.F B XXXXXXX</p>
+						<p>DIRECCIÓN COMPLETA</p>
+						<h4>CONTACTO:</h4>
+						<p><strong>Mail:</strong> info@dietagourmet.com</p>
+						<p><strong>Tel:</strong> (+34) 914 355 743</p>
+					</div>
+					<div style="width: 145px;">
+						<h2>TU PEDIDO</h2>
+						<h3 class="down_pedido">TU DIETA IDEAL</h3>
+						<ul>
+							<li><a href="">PERFILADOR</a></li>
+							<li><a href="">FAQ</a></li>
+							<li><a href="">MENÚ DIETA GOURMET</a></li>
+						</ul>
+					</div>
 					<div style="width: 134px;">
 						<h3>DIETA GOURMET</h3>
 						<ul>
@@ -54,9 +79,35 @@
 							<li><a href="">NORMATIVA Y LOPD</a></li>
 						</ul>
 					</div>
-					<div style="width: 149px;">s</div>
-					<div style="width: 148px;">s</div>
-					<div style="width: 149px;">s</div>
+					<div style="width: 149px;">
+						<h3>CLUB D. GOURMET</h3>
+						<ul>
+							<li><a href="">HISTORIAS DE ÉXITO</a></li>
+							<li><a href="">TRUCOS</a></li>
+							<li><a href="">NOTICIAS</a></li>
+							<li><a href="">PSICOLOGÍA</a></li>
+							<li><a href="">FITNESS</a></li>
+							<li><a href="">KIDS</a></li>
+							<li><a href="">PARTNERS</a></li>
+						</ul>
+					</div>
+					<div style="width: 148px;">
+						<h3>SUSANA MONEREO</h3>
+						<ul>
+							<li><a href="">SUSANA MONEREO</a></li>
+							<li><a href="">BASES NUTRICION</a></li>
+							<li><a href="">PREGÚNTALE A ...</a></li>
+							<li><a href="">INFORMES</a></li>
+						</ul>
+					</div>
+					<div style="width: 149px;">
+						<h3>BLOG / PRENSA</h3>
+						<ul>
+							<li><a href="">BLOG D. GOURMET</a></li>
+							<li><a href="">PERFILES SOCIALES</a></li>
+							<li><a href="">RECURSOS PRENSA</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
