Done. 5 cajas html, 3 imágenes. Ubuntu font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="reset.css" />
 <link rel="stylesheet" href="main.css" />
+<link href='http://fonts.googleapis.com/css?family=Ubuntu:regular,bold' rel='stylesheet' type='text/css'>
 <title>myProducts</title>
 </head>
 <body>
@@ -12,19 +13,19 @@
 		<div id="header">
 			<a href="#" title=""><img src="assets/logo2.jpg" alt="logo" /></a>
 			<ul class="toolbar">
-				<li><a href="">TU DIETA IDEAL</a></li>
-				<li><a href="">DIETA GOURMET</a></li>
-				<li><a href=""><span>&nbsp;</span>NUTRICIÓN</a></li>
-				<li><a href="">CLUB GOURMET</a></li>
-				<li><a href="">HAZ <span>TU PEDIDO</span></a></li>
+				<li><a href="#" title="">TU DIETA IDEAL</a></li>
+				<li><a href="#" title="">DIETA GOURMET</a></li>
+				<li><a href="#" title=""><span>&nbsp;</span>NUTRICIÓN</a></li>
+				<li><a href="#" title="">CLUB GOURMET</a></li>
+				<li><a href="#" title="">HAZ <span>TU PEDIDO</span></a></li>
 				<li>
-					<a class="mini contact" href="">CONTACTO</a>
-					<a class="mini" href="">BLOG</a>
+					<a class="mini contact" href="#" title="">CONTACTO</a>
+					<a class="mini" href="#" title="">BLOG</a>
 				</li>
 				<li class="register">
-					<a href="">REGÍSTRATE</a>
-					<a href="">TU PERFIL</a>
-					<a href="">NEWSLETTER DG</a>
+					<a href="#" title="">REGÍSTRATE</a>
+					<a href="#" title="">TU PERFIL</a>
+					<a href="#" title="">NEWSLETTER DG</a>
 					<form action="" method="">
 						<input type="text" name="search" />
 					</form>
@@ -35,20 +36,64 @@
 			<div class="box box1">
 				<h1>PIERDE HASTA 3 KILOS <span>EN 3 MESES</span></h1>
 				<p>Pierde peso con nuestro <strong>exclusivo plan dietético,</strong> elaborado y controlado por la Dra. Susana Monereo</p>
-				<a href="">más información</a>
-				<img class="box1_bascula" src="assets/box1_bascula.png" alt="" />
+				<a href="#" title="">más información</a>
+				<img class="corner_right_down" src="assets/box1_bascula.png" alt="" />
 			</div>
-			<div class="box box2">
+			<div class="box box2 box_shadow">
 				<h2>CONSEJOS DE <span>NUTRICIÓN</span></h2>
 				<p>Los mejores consejos de nutrición elaborados por la Dra. Susana Monereo y su equipo de endocrinología</p>
-				<a href="">lee nuestros consejos</a>
+				<a href="#" title="">lee nuestros consejos</a>
+			</div>
+			<div class="box box3">
+				<h2>PEDIDOS EN MADRID <span>914 355 743</span></h2>
+				<p>Horario de atención: de 9:00h a 20:00h, fuera de ese horario utilice nuestro sistema de reserva on line</p>
+				<a href="#" title="">reserva online</a>
+				<a href="#" title="" style="bottom: 28px">contacta con nosotros</a>
+				<img class="corner_right_down" src="assets/telefono.png" alt="" />
+			</div>
+			<div class="box box3">
+				<blockquote>Estoy encantada con dieta gourmet</blockquote>
+				<a href="#" title="">más casos de éxito</a>
+			</div>
+			<div class="box box3 last">
+				<h2>3 MENÚS PARA ELEGIR</h2>
+				<p>Tenemos 3 menús para cada perfil</p>
+				<div class="menu">
+					<span>a</span>
+					<h4>Dieta de adelgazamiento</h4>
+					<p>para quienes deben perder peso</p>
+				</div>
+				<div class="menu" style="background-color: #e6a200">
+					<span>b</span>
+					<h4>Dieta de mantenimiento</h4>
+					<p>para mantenerte en línea</p>
+				</div>
+				<div class="menu" style="background-color: #e6407a">
+					<span>c</span>
+					<h4>Dieta para deportistas</h4>
+					<p>rico en carbohidratos</p>
+				</div>
+				<a href="#" title="">más información</a>
+			</div>
+			<div class="box box3">
+				<img src="assets/diet_gift.png" alt="" />
+				<a href="#" title="">más información</a>
+			</div>
+			<div class="box box3">
+				<img src="assets/diet_3_pasos.png" alt="" />
+				<a href="#" title="" style="color: #fff">los 3 pasos de la dieta</a>
+			</div>
+			<div class="box box_shadow box3 last">
+				<img src="assets/dieta_completa.png" alt="" />
+				<a href="#" title="" style="bottom: 28px;">reserva on line</a>
+				<a href="#" title="">más información</a>
 			</div>
 			<div id="footer">
 				<div class="footer_head">
 					<ul>
-						<li><a href=""><img src="assets/facebook.png" alt="" /></a></li>
-						<li><a href=""><img src="assets/twitter.png" alt="" /></a></li>
-						<li><a href=""><img src="assets/rss.png" alt="" /></a></li>
+						<li><a href="#" title=""><img src="assets/facebook.png" alt="" /></a></li>
+						<li><a href="#" title=""><img src="assets/twitter.png" alt="" /></a></li>
+						<li><a href="#" title=""><img src="assets/rss.png" alt="" /></a></li>
 					</ul>
 				</div>
 				<div class="footer_content">
@@ -65,47 +110,47 @@
 						<h2>TU PEDIDO</h2>
 						<h3 class="down_pedido">TU DIETA IDEAL</h3>
 						<ul>
-							<li><a href="">PERFILADOR</a></li>
-							<li><a href="">FAQ</a></li>
-							<li><a href="">MENÚ DIETA GOURMET</a></li>
+							<li><a href="#" title="">PERFILADOR</a></li>
+							<li><a href="#" title="">FAQ</a></li>
+							<li><a href="#" title="">MENÚ DIETA GOURMET</a></li>
 						</ul>
 					</div>
 					<div style="width: 134px;">
 						<h3>DIETA GOURMET</h3>
 						<ul>
-							<li><a href="">CONCEPTO DG</a></li>
-							<li><a href="">¿QUIÉNES SOMOS?</a></li>
-							<li><a href="">NUESTRA COCINA</a></li>
-							<li><a href="">NORMATIVA Y LOPD</a></li>
+							<li><a href="#" title="">CONCEPTO DG</a></li>
+							<li><a href="#" title="">¿QUIÉNES SOMOS?</a></li>
+							<li><a href="#" title="">NUESTRA COCINA</a></li>
+							<li><a href="#" title="">NORMATIVA Y LOPD</a></li>
 						</ul>
 					</div>
 					<div style="width: 149px;">
 						<h3>CLUB D. GOURMET</h3>
 						<ul>
-							<li><a href="">HISTORIAS DE ÉXITO</a></li>
-							<li><a href="">TRUCOS</a></li>
-							<li><a href="">NOTICIAS</a></li>
-							<li><a href="">PSICOLOGÍA</a></li>
-							<li><a href="">FITNESS</a></li>
-							<li><a href="">KIDS</a></li>
-							<li><a href="">PARTNERS</a></li>
+							<li><a href="#" title="">HISTORIAS DE ÉXITO</a></li>
+							<li><a href="#" title="">TRUCOS</a></li>
+							<li><a href="#" title="">NOTICIAS</a></li>
+							<li><a href="#" title="">PSICOLOGÍA</a></li>
+							<li><a href="#" title="">FITNESS</a></li>
+							<li><a href="#" title="">KIDS</a></li>
+							<li><a href="#" title="">PARTNERS</a></li>
 						</ul>
 					</div>
 					<div style="width: 148px;">
 						<h3>SUSANA MONEREO</h3>
 						<ul>
-							<li><a href="">SUSANA MONEREO</a></li>
-							<li><a href="">BASES NUTRICION</a></li>
-							<li><a href="">PREGÚNTALE A ...</a></li>
-							<li><a href="">INFORMES</a></li>
+							<li><a href="#" title="">SUSANA MONEREO</a></li>
+							<li><a href="#" title="">BASES NUTRICION</a></li>
+							<li><a href="#" title="">PREGÚNTALE A ...</a></li>
+							<li><a href="#" title="">INFORMES</a></li>
 						</ul>
 					</div>
 					<div style="width: 149px;">
 						<h3>BLOG / PRENSA</h3>
 						<ul>
-							<li><a href="">BLOG D. GOURMET</a></li>
-							<li><a href="">PERFILES SOCIALES</a></li>
-							<li><a href="">RECURSOS PRENSA</a></li>
+							<li><a href="#" title="">BLOG D. GOURMET</a></li>
+							<li><a href="#" title="">PERFILES SOCIALES</a></li>
+							<li><a href="#" title="">RECURSOS PRENSA</a></li>
 						</ul>
 					</div>
 				</div>
